--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pickle-mixin
-scikit-learn
-numpy
-streamlit
-pandas
+pickle-mixin==1.0.2
+scikit-learn==1.0.1
+numpy==1.21.4
+streamlit==1.20.0
+pandas==0.25.1
 protobuf==3.20.1
